<resources>
    <string name="app_name">Practical3</string>
    <string name="gmail">Gmail</string>
    <string name="signup">signup</string>
    <string name="firstname">FIRST NAME</string>
    <string name="lastname">LAST NAME</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="birth_date">Birth date</string>
    <string name="gender">Gender</string>
    <string name="location">State</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="mobile_number">Mobile number</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="password_1">Password:</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="state">State:</string>
    <string name="birth_date_1">Birth date:</string>
    <string name="gender_1">Gender:</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>