<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/f_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/first_name"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/f_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_toRightOf="@id/f_heading" />

        <TextView
            android:id="@+id/l_heading"
            android:layout_below="@id/f_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/last_name"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/l_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_toRightOf="@id/l_heading"
            android:layout_below="@id/f_name"/>

        <TextView
            android:id="@+id/e_heading"
            android:layout_below="@id/l_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/email"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_toRightOf="@id/e_heading"
            android:layout_below="@id/l_name"/>

        <TextView
            android:id="@+id/p_heading"
            android:layout_below="@id/e_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/password_1"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_toRightOf="@id/p_heading"
            android:layout_below="@id/email"/>

        <TextView
            android:id="@+id/m_heading"
            android:layout_below="@id/p_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/mobile_no"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_toRightOf="@id/m_heading"
            android:layout_below="@id/pass"/>

        <TextView
            android:id="@+id/s_heading"
            android:layout_below="@id/m_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/state"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_toRightOf="@id/s_heading"
            android:layout_below="@id/mob"/>

        <TextView
            android:id="@+id/b_heading"
            android:layout_below="@id/s_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/birth_date_1"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/birth_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_toRightOf="@id/b_heading"
            android:layout_below="@id/state"/>

        <TextView
            android:id="@+id/g_heading"
            android:layout_below="@id/b_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/gender_1"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_toRightOf="@id/g_heading"
            android:layout_below="@id/birth_date"/>
    </RelativeLayout>

</RelativeLayout>