<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/gmail"
            android:textColor="@color/colorAccent"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@id/tv_login_txt"
            android:layout_toRightOf="@id/tv_login_txt"
            android:text="@string/signup"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/tv_login_txt"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:padding="20dp">

            <EditText
                android:id="@+id/et_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:fontFamily="@font/baloo_thambi"
                android:hint="@string/firstname"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <View
                android:id="@+id/v_firstname"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/et_firstname"
                android:layout_marginTop="6dp"
                android:background="@color/colorAccent" />

            <EditText
                android:id="@+id/et_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v_firstname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:fontFamily="@font/baloo_thambi"
                android:hint="@string/lastname"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <View
                android:id="@+id/v_lastname"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/et_lastname"
                android:layout_marginTop="6dp"
                android:background="@color/colorAccent" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v_lastname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:fontFamily="@font/baloo_thambi"
                android:hint="@string/email_address"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <View
                android:id="@+id/v_email"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/et_email"
                android:layout_marginTop="6dp"
                android:background="@color/colorAccent" />

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:fontFamily="@font/baloo_thambi"
                android:hint="@string/password"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <View
                android:id="@+id/v_pass"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/et_pass"
                android:layout_marginTop="6dp"
                android:background="@color/colorAccent" />

            <EditText
                android:id="@+id/et_c_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v_pass"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:fontFamily="@font/baloo_thambi"
                android:hint="@string/re_enter_password"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <View
                android:id="@+id/v_c_pass"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/et_c_pass"
                android:layout_marginTop="6dp"
                android:background="@color/colorAccent" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v_c_pass"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:fontFamily="@font/baloo_thambi"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <View
                android:id="@+id/v_mobile"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/et_mobile"
                android:layout_marginTop="6dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/v_mobile"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo_thambi"
                android:text="@string/location"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <AutoCompleteTextView
                android:id="@+id/auto_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_location"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:ems="10"
                android:fontFamily="@font/baloo_thambi"
                android:hint="@string/enter_your_location"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <View
                android:id="@+id/v_location"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/auto_location"
                android:layout_marginTop="6dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/v_location"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo_thambi"
                android:text="@string/birth_date"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <DatePicker
                android:id="@+id/birthdate"
                style="@style/PickerTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_birth"
                android:layout_centerHorizontal="true"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/birthdate"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo_thambi"
                android:text="@string/gender"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/s_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_gender"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:entries="@array/gender" />



            <Button
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/s_gender"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_drawable"
                android:elevation="8dp"
                android:fontFamily="@font/baloo_thambi"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
